--- a/Vips/Vips.csproj
+++ b/Vips/Vips.csproj
@@ -12,4 +12,8 @@
       <ProjectReference Include="..\..\libs\serialport-lib-dotnet-master\SerialPortLib\SerialPortLib.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="GodSharp.SerialPort" Version="1.2.0.6" />
+    </ItemGroup>
+
 </Project>
